# rust-grpc.rf

./: Cargo.toml  README.md  README.template.md  Reframe.toml  build.rs
src/: client.rs  server.rs
src/protos/: $param.main_service_name_snake_case$.rs  mod.rs
src/protos/proto_src/: $param.main_service_name_snake_case$.proto
